--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "inf-321-show-pass",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "^4.21.2",
-    "morgan": "~1.9.1"
-  }
+    "name": "inf-321-show-pass",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "nodemon ./bin/www"
+    },
+    "dependencies": {
+        "cookie-parser": "~1.4.4",
+        "debug": "~2.6.9",
+        "ejs": "^3.1.10",
+        "express": "^4.21.2",
+        "http-errors": "~1.6.3",
+        "morgan": "~1.9.1"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.9"
+    }
 }
