--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "express": "^4.21.2",
         "express-session": "^1.18.1",
         "http-errors": "~1.6.3",
-        "mongoose": "^8.9.4",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.9.5",
         "morgan": "~1.9.1"
     },
     "devDependencies": {
