--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "dotenv": "^16.4.7",
         "ejs": "^3.1.10",
         "express": "^4.21.2",
+        "fuse.js": "^7.0.0",
         "http-errors": "~1.6.3",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.9.5",
