--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "http-errors": "~1.6.3",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.9.5",
-        "morgan": "~1.9.1"
+        "morgan": "~1.9.1",
+        "node-cron": "^3.0.3"
     },
     "devDependencies": {
         "nodemon": "^3.1.9"
