--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "ejs": "^3.1.10",
         "express": "^4.21.2",
         "fuse.js": "^7.0.0",
+        "gridfs-stream": "^1.1.1",
         "http-errors": "~1.6.3",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.9.5",
+        "mongoose": "^8.9.6",
         "morgan": "~1.9.1",
+        "multer": "^1.4.5-lts.1",
         "node-cron": "^3.0.3"
     },
     "devDependencies": {
